Added more tasks to the CRUD service class, added more tasks to the posts controller, added a few extra classes, altered some variables in some of the model classes.

--- a/StudyAPI/appsettings.json
+++ b/StudyAPI/appsettings.json
@@ -2,6 +2,7 @@
   "StudyDBSettings": {
     "UserCollection": "User",
     "PostsCollection": "Posts",
+    "CommentsCollection": "Comments",
     "ConnectionString": "mongodb+srv://StudyHelperAdmin:YxOAopCFLB2pARSv@mystudyhelper-wt5mp.mongodb.net/",
     "DatabaseName": "MyStudyHelperDB"
   },
